# nrf53-test

./: Cargo.toml
.cargo/: config
app/: Cargo.toml
app/src/: main.rs
net/: Cargo.toml  memory.x
net/src/: main.rs
